# DAT160-Semester-oppgave

./: README.md  package.xml  setup.py
launch/: search_rescue.launch.py
multi_robot_challenge_23/: Bug2.py  leader.py  robot_handler.py  slam_node.py
multi_robot_challenge_interfaces/: CMakeLists.txt  package.xml
multi_robot_challenge_interfaces/action/: NavigateToPoint.action
